--- a/wp-content/themes/trek-travel-theme/src/scss/PDP/_pdp-dates-pricing.scss
+++ b/wp-content/themes/trek-travel-theme/src/scss/PDP/_pdp-dates-pricing.scss
@@ -36,45 +36,35 @@
     .dates-pricing{
         nav {
             margin-bottom: 20px;
-
-            .nav-tabs {
-
-                @include media-breakpoint-up(md){
-                    gap: 10px;
-                }
-                @include media-breakpoint-down(md) {
-                    gap: 2px;
-                }
-                
-            }
             #nav-tab-year {
                 &::-webkit-scrollbar {
                     width: 0;  /* Remove scrollbar space */
                     background: transparent;  /* Optional: just make scrollbar invisible */
                 }
                 @media (max-width: 540px) {
-                    flex-direction: column;
-                    // overflow-x: scroll;
+                    flex-wrap: nowrap;
+                    overflow-x: scroll;
                     overflow-y: hidden;
                     border-bottom: none;
                 }
                 .nav-link {
                     @media (max-width: 540px) {
                         flex: none;
+                        background: transparent;
                         color: $gray-500;
-                        
-                        border-radius: 4px;
+                        border: unset;
                         margin-right: 0 !important;
                     }
-                    margin: 0;
+                    margin-left: 4px;
+                    margin-right: 4px;
                     color: $gray-500;
                     background: #F4F4F4;
                     border-radius: 4px 4px 0px 0px;
                     padding: 8px 16px;
-                    
                     @include media-breakpoint-down(lg) {
                         font-size: 16px;
                         line-height: 24px;
+                        margin-right: 20px;
                     }
                     &.active {
                         font-weight: $font-weight-bold;
@@ -82,43 +72,33 @@
                         background: transparent;
                         @media (max-width: 540px) {
                             font-weight: $font-weight-bold;
-                            border: 1px solid $gray-300;
+                            border-bottom: 4px solid $black;
                             color: $black;
-                            span {
-                                border-bottom: 4px solid $black;
-                                padding-bottom: 7px;
-                            }
                         }
                     }
                 }
             }
             .nav-tabs-months {
-                gap: 1px;
                 border-bottom: 1px solid #D9D9D9;
                 .nav-link {
                     background: transparent;
                     color: $gray-500;
                     border: unset;
-                    border-radius: 4px 4px 0px 0px;
-                    background-color: #F4F4F4;
                     
                     @include media-breakpoint-down(lg) {
                         font-size: 16px;
                         line-height: 24px;
-                        // margin-right: 20px;
+                        margin-right: 20px;
                     }
                     &.active {
-                        background-color: white;
                         font-weight: $font-weight-bold;
-                        border: 2px solid;
                         border-bottom: 4px solid $black;
                         color: $black;
-                        border-color: black;
                     }
                 }
             }
         }
-        .nav-tabContent-months{
+        #nav-tabContent-months{
             .accordion-button:not(.collapsed){
                 color: #000000;
                 box-shadow: none;
@@ -165,19 +145,19 @@
                 }
                 button, .pvt-box{
                     @media (max-width: 540px) {
-                        flex-direction: row;
-                        align-items: center;
+                        flex-direction: column;
+                        align-items: flex-start;
                         span{
                             width: 100% !important;
                         }
                         &::after{
-                            // position: absolute;
-                            // right: 1rem;
+                            position: absolute;
+                            right: 1rem;
                         }
                     }
                     span{
                         @media (max-width: 540px) {
-                            // margin-bottom: .5rem;
+                            margin-bottom: .5rem;
                         }
                         &.join-waitlist::before{
                             content: url("data:image/svg+xml,%3Csvg width='12' height='12' viewBox='0 0 12 12' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Ccircle cx='6' cy='6' r='6' fill='%23F0AA97'/%3E%3C/svg%3E");
@@ -274,11 +254,9 @@
             display: none;
         }
     }
-    .select-months{
+    #select-month{
         display: none;
         @media (max-width: 540px) {
-            text-align: center;
-            font-weight: 500;
             display: block;            
             border: 1px solid #B2B3B6;
             border-radius: 4px;
